imjoy-ai-engine/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hyphaserver
  namespace: hyphaserver
spec:
  selector:
    app: hyphaserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: "http"
